--- a/info.ini
+++ b/info.ini
@@ -1,5 +1,5 @@
 [info]
-vers=0
-versText=3.3.0
-discord=чурапик#6149
+vers=1
+versText=3.4.0
+discord=Чернодыр#6149
 ad=Вступайте в лучшую на Arizona RP Payson семью - Noble!
